correct spacing in update-order-status modal

--- a/src/styles/Canteen/Canteencurrentorders.css
+++ b/src/styles/Canteen/Canteencurrentorders.css
@@ -23,13 +23,11 @@
 }
 
 
-.status{
-    padding-left:100px;
-}
-
 .modal-body button{
     font-size: 15px;
     font-weight: 600;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .modal-footer button{
